--- a/wercker.yml
+++ b/wercker.yml
@@ -11,7 +11,7 @@ box: python:2.7
 # This is the build pipeline. Pipelines are the core of wercker
 # Read more about pipelines on our dev center
 # http://devcenter.wercker.com/docs/pipelines/index.html
-build:
+build-and-deploy:
   # The steps that will be executed on build
   # Steps make up the actions in your pipeline
   # Read more about steps on our dev center:
@@ -20,33 +20,18 @@ build:
     - install-packages:
         packages: python-dev libssl-dev libffi-dev
 
-    # A step that sets up the python virtual environment
     - wercker/virtualenv@1.0.0:
         name: setup virtual environment
         install_wheel: true # Enable wheel to speed up builds (experimental)
 
-    # # Use this virtualenv step for python 3.2
-    # - virtualenv
-    #     name: setup virtual environment
-    #     python_location: /usr/bin/python3.2
-
-    # A step that executes `pip install` command.
     - wercker/pip-install@0.0.6:
         requirements_file: requirements.txt
 
-    # # This pip-install clears the local wheel cache
-    # - pip-install:
-    #     clean_wheel_dir: true
-
-    # A custom script step, name value is used in the UI
-    # and the code value contains the command that get executed
     - script:
         name: build static site
         code: |
           lektor build --output-path public
 
-deploy:
-  steps:
     - script:
         name: deploy static site
         code: |
