Add credentials profile name

--- a/wercker.yml
+++ b/wercker.yml
@@ -37,6 +37,7 @@ build-and-deploy:
         code: |
           mkdir ~/.aws          
           cat << EOF > ~/.aws/credentials
+          [worlds]
           aws_access_key_id = $AWS_ACCESS_KEY_ID
           aws_secret_access_key = $AWS_SECRET_ACCESS_KEY
           EOF
