Yes really use cloudfront please

--- a/wercker.yml
+++ b/wercker.yml
@@ -41,4 +41,5 @@ build-and-deploy:
           aws_access_key_id = $AWS_ACCESS_KEY_ID
           aws_secret_access_key = $AWS_SECRET_ACCESS_KEY
           EOF
+          aws configure set preview.cloudfront true
           paver deploy
