New copy on root; email signup form is a flow block

--- a/flowblocks/text.ini
+++ b/flowblocks/text.ini
@@ -1,5 +1,5 @@
 [block]
-name = [[paragraph]]
+name = Text
 button_label = [[paragraph]]
 
 [fields.text]
@@ -9,3 +9,4 @@ type = markdown
 [fields.class]
 label = Class
 type = string
+default = ''
