Lots of changes and improvements

--- a/flowblocks/email-form.ini
+++ b/flowblocks/email-form.ini
@@ -10,7 +10,7 @@ default = 'From “A-ha!” to “Oh no!”'
 [fields.text]
 label = Text
 type = markdown
-default = "**I'm sharing everything I learn on my way to garden mastery. I'm learning a lot, and so will you! Subscribe to my newsletter and never miss out.**"
+default = "I'm sharing everything I learn on my way to garden mastery. I'm learning a lot, and so will you! Subscribe to my newsletter and never miss out."
 
 [fields.class]
 label = Class
