--- a/models/blog-post.ini
+++ b/models/blog-post.ini
@@ -3,10 +3,29 @@ name = Blog Post
 label = {{ this.title }}
 hidden = yes
 
+[fields.published]
+label = Published
+type = boolean
+checkbox_label = If checked, this will appear publicly.
+default = false
+
+[fields.keywords]
+label = Keywords
+type = text
+default = ''
+description = "Find a keyword that’s highly searched in the Google Keyword Planner Tool; find long-tail keywords to complement."
+
+[fields.notes]
+label = Notes
+type = text
+default = ''
+description = "Heading, image, topic ideas"
+
 [fields.title]
 label = Title
 type = string
 size = large
+description = "Ideate 20-30 headlines, balancing attention-grabbing and keyword-focused."
 
 [fields.author]
 label = Author
@@ -32,12 +51,6 @@ type = boolean
 checkbox_label = If checked, then disqus comments will be rendered on the post.
 default = true
 
-[fields.enable_subscribe_form]
-label = Enable subscription form?
-type = boolean
-checkbox_label = If checked, then the subscription form will be rendered on the page.
-default = true
-
 [fields.summary]
 label = Post summary
 type = markdown
@@ -46,3 +59,4 @@ default = ''
 [fields.body]
 label = Body
 type = flow
+description = "Use all keywords in headings; link internally; end with a question; add a signup form."
