--- a/models/page.ini
+++ b/models/page.ini
@@ -2,9 +2,28 @@
 name = Page
 label = {{ this.title }}
 
+[fields.published]
+label = Published
+type = boolean
+checkbox_label = If checked, this will appear publicly.
+default = false
+
+[fields.keywords]
+label = Keywords
+type = text
+default = ''
+description = "Find a keyword that’s highly searched in the Google Keyword Planner Tool; find long-tail keywords to complement."
+
+[fields.notes]
+label = Notes
+type = text
+default = ''
+description = "Heading, image, topic ideas"
+
 [fields.title]
 label = Title
 type = string
+description = "Ideate 20-30 headlines, balancing attention-grabbing and keyword-focused."
 
 [fields.enable_comments]
 label = Enable comments?
@@ -12,13 +31,13 @@ type = boolean
 checkbox_label = If checked, then disqus comments will be rendered on the page.
 default = true
 
-[fields.enable_subscribe_form]
-label = Enable subscription form?
-type = boolean
-checkbox_label = If checked, then the subscription form will be rendered on the page.
-default = true
-
+[fields.summary]
+label = Post summary
+type = markdown
+default = ''
+description = "150-160 characters; mention the keyword once; answer *why*!"
 
 [fields.body]
 label = Body
 type = flow
+description = "Use all keywords in headings; link internally; end with a question; add a signup form."
