Simplify layout for now, add email form customization

--- a/flowblocks/email-form.ini
+++ b/flowblocks/email-form.ini
@@ -12,6 +12,11 @@ label = Text
 type = markdown
 default = "I'm sharing everything I learn on my way to garden mastery. I'm learning a lot, and so will you! Subscribe to my newsletter and never miss out."
 
+[fields.extra_html]
+label = Extra HTML
+type = html
+default = ""
+
 [fields.class]
 label = Class
 type = string
