Customize button text

--- a/flowblocks/email-form.ini
+++ b/flowblocks/email-form.ini
@@ -17,6 +17,11 @@ label = Extra HTML
 type = html
 default = ""
 
+[fields.button_text]
+label = Button text
+type = string
+default = 'Send Me Hard-Knock Lessons on Gardening!'
+
 [fields.class]
 label = Class
 type = string
