Add event tracking

--- a/models/page.ini
+++ b/models/page.ini
@@ -31,6 +31,16 @@ type = boolean
 checkbox_label = If checked, then disqus comments will be rendered on the page.
 default = true
 
+[fields.event]
+label = Event to track
+type = string
+default = ''
+
+[fields.event_type]
+label = Type of event
+type = string
+default = ''
+
 [fields.summary]
 label = Post summary
 type = markdown
@@ -41,3 +51,4 @@ description = "150-160 characters; mention the keyword once; answer *why*!"
 label = Body
 type = flow
 description = "Use all keywords in headings; link internally; end with a question; add a signup form."
+
