Added winter-pruning blog post

--- a/models/blog-post.ini
+++ b/models/blog-post.ini
@@ -38,7 +38,7 @@ label = Twitter Handle
 type = string
 width = 1/4
 addon_label = @
-default = eykd
+default = CrashGardens
 
 [fields.pub_date]
 label = Publication date
